// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationsListControls/ShowViolationsButton ListNotVisibleWithMultipleViolations smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container">
          <div class="vehicles">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="list-group-item">
                  <div class="violations-table-wrapper">
                    <div class="violations-table-header">
                      <div class="row">
                        <button aria-controls="violations-table-e5f6g7h8"
                                aria-expanded="false"
                                class="btn btn-block w-100 btn-outline-primary"
                                type="button"
                        >
                          show 2 violations
                        </button>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationsListControls/ShowViolationsButton ListNotVisibleWithNoViolations smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container">
          <div class="vehicles">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="list-group-item">
                  <div class="violations-table-wrapper">
                    <div class="violations-table-header">
                      <div class="row">
                        <button aria-controls="violations-table-e5f6g7h8"
                                aria-expanded="false"
                                class="btn btn-block w-100 btn-outline-secondary"
                                disabled
                                type="button"
                        >
                          no violations
                        </button>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationsListControls/ShowViolationsButton ListNotVisibleWithOneViolation smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container">
          <div class="vehicles">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="list-group-item">
                  <div class="violations-table-wrapper">
                    <div class="violations-table-header">
                      <div class="row">
                        <button aria-controls="violations-table-e5f6g7h8"
                                aria-expanded="false"
                                class="btn btn-block w-100 btn-outline-primary"
                                type="button"
                        >
                          show 1 violation
                        </button>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationsListControls/ShowViolationsButton ListVisibleWithMultipleViolations smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container">
          <div class="vehicles">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="list-group-item">
                  <div class="violations-table-wrapper">
                    <div class="violations-table-header">
                      <div class="row">
                        <button aria-controls="violations-table-e5f6g7h8"
                                aria-expanded="false"
                                class="btn btn-block w-100 btn-outline-primary"
                                type="button"
                        >
                          hide violations
                        </button>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationsListControls/ShowViolationsButton ListVisibleWithNoViolations smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container">
          <div class="vehicles">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="list-group-item">
                  <div class="violations-table-wrapper">
                    <div class="violations-table-header">
                      <div class="row">
                        <button aria-controls="violations-table-e5f6g7h8"
                                aria-expanded="false"
                                class="btn btn-block w-100 btn-outline-secondary"
                                disabled
                                type="button"
                        >
                          no violations
                        </button>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationsListControls/ShowViolationsButton ListVisibleWithOneViolation smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container">
          <div class="vehicles">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="list-group-item">
                  <div class="violations-table-wrapper">
                    <div class="violations-table-header">
                      <div class="row">
                        <button aria-controls="violations-table-e5f6g7h8"
                                aria-expanded="false"
                                class="btn btn-block w-100 btn-outline-primary"
                                type="button"
                        >
                          hide violations
                        </button>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
